--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,10 +1,7 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+
+.App {
+  /*text-align: center;*/
 }
 
 .App-header {
