--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,3 +1,8 @@
+@keyframes spin {
+  from { transform: rotate(0deg); }
+  to   { transform: rotate(360deg); }
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -35,6 +40,27 @@ body {
   text-transform: uppercase;
 }
 
+.popover {
+  max-width: unset;
+}
+.popover-header {
+  padding: 8px 14px;
+  margin-bottom: 0;
+  font-size: 1rem;
+  background-color: #f7f7f7;
+  border-bottom: 1px solid #ebebeb;
+  border-top-right-radius: calc(0.3rem - 1px);
+  border-top-left-radius: calc(0.3rem - 1px);
+}
+.popover-body {
+  padding: 9px 14px;
+}
+
+/*
+ * Elements
+ */
+
+/* <Charts/> */
 
 .Charts__title {
   position: relative;
@@ -48,3 +74,117 @@ body {
   cursor: pointer;
 }
 
+
+
+/* <ExperimentTable/> */
+
+.ExperimentTable__stepsHeader {
+  /*width: 400px;*/
+}
+.ExperimentTable__stepsColumn {
+  /*width: 400px;*/
+  overflow-x: scroll !important;
+}
+
+.ExperimentTable tr > *:nth-child(1) { width: 150px; }
+.ExperimentTable tr > *:nth-child(2) { width: 90px; }
+.ExperimentTable tr > *:nth-child(3) { width: 120px; }
+.ExperimentTable tr > *:nth-child(4) { width: 90px; }
+.ExperimentTable tr > *:nth-child(5) { width: 90px; }
+
+.steps {
+  display: flex;
+  flex: row;
+  margin: 10px;
+}
+
+.step {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex: 0 0 100px;
+  width: 100px;
+  height: 60px;
+  padding-top: 20px;
+  align-items: center;
+}
+.step:not(:first-child)::after {
+  position: absolute;
+  z-index: 1;
+  top: 10px;
+  left: calc(-50% + 6px);
+  content: '\A';
+  background-color: #eee;
+  border: 1px solid #ccc;
+  border-width: 1px 0 1px 0;
+  width:  calc(100% - 12px);
+  height: 5px;
+}
+.step--not-started {
+  opacity:  0.5;
+}
+
+.step__dot {
+  position: absolute;
+  top: 5px;
+  content: '\A';
+  background-color: #eee;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  width:  15px;
+  height: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.step__dot:hover::after {
+  position: absolute;
+  content: '\A';
+  border-radius: 50%;
+  border: 2px solid #ddd;
+  width:  20px;
+  height: 20px;
+}
+
+.step .step__dot::before {
+  content: '\A';
+  border-radius: 50%;
+  width:  8px;
+  height: 8px;
+}
+.step--success .step__dot::before {
+  background-color: #66dA00;
+}
+.step--warning .step__dot::before {
+  background-color: #FFcb00;
+}
+.step--error .step__dot::before {
+  background-color: #fC7972;
+}
+.step--in-progress .step__dot::before {
+  width:  0px;
+  height: 0px;
+  border: 5px solid #aaa;
+  border-color: #aaa transparent #aaa transparent;
+  animation-name: spin;
+  animation-duration: 2000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+.step__name {
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.step__details {
+  font-size: 10px;
+  max-width: 100%;
+}
+
+.job__command {
+  max-width: 600px;
+  max-height: 200px;
+  overflow: auto
+}
