--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -78,6 +78,19 @@ body {
 
 /* <ExperimentTable/> */
 
+.ExperimentTable *::-webkit-scrollbar {
+  width: 10px;
+  background-color: #F5F5F5;
+}
+.ExperimentTable *::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+.ExperimentTable *::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #d9d9d9;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.2);
+}
+
 .ExperimentTable__stepsHeader {
   /*width: 400px;*/
 }
