--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -23,22 +23,10 @@ body {
   font-weight: 700;
 }
 
-.panel {
-  position: relative;
-  padding: 3em 1em 1em;
-  border: 1px solid #d8d8d8;
-  margin: 1.5rem 0 0;
-}
-.panel__caption {
-  position: absolute;
-  left: 0;
-  top: 0;
-  padding: 1em;
-  color: #aaa;
-  font-size: smaller;
-  font-weight: 500;
-  text-transform: uppercase;
-}
+
+/*
+ * Corrections
+ */
 
 .popover {
   max-width: unset;
@@ -55,6 +43,11 @@ body {
 .popover-body {
   padding: 9px 14px;
 }
+
+.sort-column > span.fa {
+  margin: 0 5px !important;
+}
+
 
 /*
  * Elements
