--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -24,12 +24,26 @@ body {
 }
 
 
+*::-webkit-scrollbar {
+  width: 10px;
+  background-color: #F5F5F5;
+}
+*::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+*::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #d9d9d9;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.2);
+}
+
 /*
  * Corrections
  */
 
 .popover {
   max-width: unset;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
 }
 .popover-header {
   padding: 8px 14px;
@@ -70,19 +84,6 @@ body {
 
 
 /* <ExperimentTable/> */
-
-.ExperimentTable *::-webkit-scrollbar {
-  width: 10px;
-  background-color: #F5F5F5;
-}
-.ExperimentTable *::-webkit-scrollbar-track {
-  background-color: transparent;
-}
-.ExperimentTable *::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background-color: #d9d9d9;
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.2);
-}
 
 .ExperimentTable__stepsHeader {
   /*width: 400px;*/
@@ -133,6 +134,9 @@ body {
 }
 .step--not-started {
   opacity:  0.5;
+}
+.step--active, .step--active:hover {
+  background-color: rgba(89, 158, 255, 0.14);
 }
 
 .step__dot {
@@ -199,4 +203,10 @@ body {
   overflow: auto;
   font-family: monospace;
   font-size: 12px;
+}
+
+.Popover__scrollArea {
+  max-height: 400px;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
