style: bootstrap button white

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -61,6 +61,42 @@ body {
   margin: 0 5px !important;
 }
 
+.btn-secondary {
+  color: #292b2c;
+  background-color: #fff;
+  border-color: #ccc;
+}
+.btn-secondary:hover {
+  color: #292b2c;
+  background-color: #e6e6e6;
+  border-color: #adadad;
+}
+.btn-secondary:focus, .btn-secondary.focus {
+  -webkit-box-shadow: 0 0 0 2px rgba(204, 204, 204, 0.5);
+          box-shadow: 0 0 0 2px rgba(204, 204, 204, 0.5);
+}
+.btn-secondary.disabled, .btn-secondary:disabled {
+  color: #292b2c;
+  background-color: #fff;
+  border-color: #ccc;
+}
+.btn-secondary:not([disabled]):not(.disabled):active,
+.btn-secondary:not([disabled]):not(.disabled).active,
+.show > .btn-secondary.dropdown-toggle {
+  color: #292b2c;
+  background-color: #e6e6e6;
+  background-image: none;
+  border-color: #adadad;
+}
+
+.dropdown--inline {
+  display: inline-block !important;
+}
+
+.btn:not(.disabled) {
+  cursor: pointer;
+}
+
 
 /*
  * Elements
