--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -9,6 +9,13 @@ body {
   font-size: 14px;
 }
 
+html, body, #root {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  font-family: Ubuntu;
+}
+
 .text-center {
   text-align: center;
 }
@@ -23,6 +30,10 @@ body {
 }
 
 
+/*
+ * Scrollbars
+ */
+
 *::-webkit-scrollbar {
   width: 10px;
   background-color: #F5F5F5;
@@ -35,6 +46,7 @@ body {
   background-color: #d9d9d9;
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.2);
 }
+
 
 /*
  * Corrections
@@ -101,6 +113,54 @@ body {
 /*
  * Elements
  */
+
+/* App */
+.App {
+  width: 100%;
+  height: 100%;
+}
+.App__content {
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+}
+
+
+/* Login */
+
+.Login {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: #eee;
+}
+.Login > * {
+  position: absolute;
+  top: 20%;
+  /*transform: translateY(-50%);*/
+}
+.Login__form {
+  display: inline-flex;
+  overflow: hidden;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+.Login__form > * {
+  transition: all .25s;
+}
+.Login__form.Login__form--requires2fa > * {
+  transform: translateX(calc(-100% - 20px));
+}
+.Login__credentials {
+  flex: 0 0 auto;
+  width: 100%;
+  margin-right: 20px;
+}
+.Login__code {
+  flex: 0 0 auto;
+  width: 100%;
+}
+
 
 /* <Charts/> */
 
