table hover styling

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -130,6 +130,10 @@ html, body, #root {
   text-decoration: underline;
 }
 
+.table-hover tbody tr:hover {
+  background-color: rgba(0, 0, 0, 0.025) !important;
+}
+
 /*
  * Elements
  */
