--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -33,6 +33,17 @@ html, body, #root {
   cursor: pointer;
 }
 
+.title {
+  padding: 1em 0;
+  color: #aaa;
+  font-size: small;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.list-icon {
+  width: 30px;
+}
 
 /*
  * Scrollbars
@@ -133,6 +144,13 @@ html, body, #root {
 .table-hover tbody tr:hover {
   background-color: rgba(0, 0, 0, 0.025) !important;
 }
+
+@media (min-width: 1200px) {
+  .modal-lg {
+    max-width: 1100px;
+  }
+}
+
 
 /*
  * Elements
@@ -379,4 +397,42 @@ html, body, #root {
 
 .UserPortal__table td:last-child {
   width: 90px;
+}
+
+
+/*
+ * ExperimentModal
+ */
+
+.ExperimentModal { }
+.ExperimentModal__informations > .row > * {
+  padding: 0.3rem;
+}
+.ExperimentModal__informations > .row > *:first-child {
+  padding-left: 50px;
+}
+.ExperimentModal__label {
+  /* font-weight: bold; */
+}
+.ExperimentModal__value {
+  color: var(--gray);
+}
+.ExperimentModal__value > pre {
+  color: inherit;
+  background-color: #eee;
+  margin: 0;
+}
+
+
+/*
+ * IGVBrowser
+ */
+
+.IGVBrowser { }
+.IGVBrowser > div /* #igvRootDiv */ {
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25em;
+  padding-top: 0;
+  padding-bottom: 1rem;
+  margin: 0;
 }
