--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -190,6 +190,15 @@ html, body, #root {
   position: absolute;
   top: 20%;
 }
+.Login__loading,
+.Login__title {
+  font-size: 60px;
+  font-weight: bold;
+  width: 100%;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.12156862745098039);
+  letter-spacing: 2px;
+}
 .Login__form {
   overflow: hidden;
   padding-top: 15px;
