implement server-side rendering

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -235,6 +235,9 @@ html, body, #root {
 
 /* <Charts/> */
 
+.Charts__placeholder {
+  display: inline-block;
+}
 .Charts__title {
   position: relative;
 }
