--- a/client/src/styles/autocomplete.css
+++ b/client/src/styles/autocomplete.css
@@ -18,7 +18,7 @@
   margin: 6px 0 0;
 
   width: 100%;
-  min-width: 0 !important;
+  min-width: 450px !important;
   max-width: none !important;
   height: auto;
   max-height: 500px;
