--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -142,7 +142,7 @@ html, body, #root {
   cursor: pointer;
 }
 
-.nav-tabs .nav-link {
+.nav-link {
   cursor: pointer;
 }
 
@@ -168,6 +168,11 @@ html, body, #root {
     max-width: 1100px;
   }
 }
+@media (min-width: 1200px) {
+  .nav-link {
+    padding: 0.5rem 1rem !important;
+  }
+}
 
 
 /*
@@ -188,8 +193,6 @@ html, body, #root {
   position: relative;
 }
 .App__logout {
-  position: absolute;
-  right: 0;
   padding: 0.5rem 1rem;
 }
 .App__tabs .tab-pane {
