--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -82,6 +82,24 @@ html, body, #root {
 
 
 /*
+ * Placeholders
+ */
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #aaa !important;
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: #aaa !important;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: #aaa !important;
+}
+
+
+/*
  * Corrections
  */
 
