--- a/client/src/styles/VariantSearch.css
+++ b/client/src/styles/VariantSearch.css
@@ -8,9 +8,6 @@
 
 .VariantSearch {
   display: flex;
-  /* margin-top: 0.5rem; */
-  /* padding-top: 1rem; */
-  /* padding-bottom: 1rem; */
   margin-top: 0.5rem;
   padding: 1rem 1rem;
   border: 1px solid rgba(0,0,0,.125);
@@ -29,12 +26,27 @@
 .VariantSearch__end {
   width: 15ch !important;
 }
+.VariantSearch__ref,
+.VariantSearch__alt {
+  width: 10ch !important;
+}
 .VariantSearch__or {
   color: #ccc;
   padding: 0 1rem 0 0.5rem;
   user-select: none;
   align-self: stretch;
   padding-top: 1.7rem;
+}
+.VariantSearch__separator {
+  content: ' ';
+  display: inline-block;
+  border-right: 1px solid #ccc;
+  height: 100%;
+  width: 1px;
+  height: 3rem;
+  margin-bottom: -0.5rem;
+  margin-left: 0.5rem;
+  margin-right: 1rem;
 }
 .VariantSearch__matches,
 .VariantSearch__buttons {
